# ort_runner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Justfile  README.md  dev.just  pyproject.toml
.github/actions/build-target/: action.yml
.github/actions/setup-podman-image/: action.yml
.github/workflows/: ci.yml  release.yml
cmake/: FindOnnxRuntime.cmake
examples/large_reduce/: make_model.py
examples/load_inputs/: README.md  make_demo.py
podman/: Containerfile.android  Containerfile.linux  Containerfile.linux-arm64  Containerfile.linux-x64
scripts/: build.py  build_image.py  cargo.py  download_prebuilt.py  fetch_onnxruntime.py  fetch_onnxruntime.sh  package.py  release.py  run_android.py  run_linux.py  smoke.py  targets.py  test_e2e.py  test_linux.py
src/: CMakeLists.txt  bench.rs  benchmark.cpp  benchmark.hpp  cli.rs  config.cpp  config.hpp  config.rs  dylib.rs  enum_utils.hpp  host.rs  info.rs  input_load.cpp  input_load.hpp  input_synth.cpp  input_synth.hpp  lib.rs  main.cpp  main.rs  model.rs  npy.cpp  npy.hpp  npz.cpp  npz.hpp  ort_session.cpp  ort_session.hpp  paths.rs  profile.rs  progress.rs  qnn.rs  report.cpp  report.hpp  session.rs  shutdown.rs  stats.rs  version.hpp.in  watchdog.rs
src/info/: mod.rs  render.rs
src/info/platform/: android.rs  generic.rs  linux.rs  mod.rs
src/report/: human.rs  json.rs  mod.rs  schema.rs
src/tensors/: dtype.rs  load.rs  mod.rs  synth.rs
tests/: CMakeLists.txt  tensor_construction.rs  test_input_synth.cpp  test_npy.cpp
